--- a/Helloworldtutorial.html
+++ b/Helloworldtutorial.html
@@ -29,7 +29,7 @@
         });
       }
     </script>
-    <script src="https://maps.googleapis.com/maps/api/js?key=YOUR_API_KEY&callback=initMap"
+    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDGuhuzjsq_tS-M67ArtS48nD9mhA05r_g&callback=initMap"
     async defer></script>
   </body>
 </html>
