--- a/earthquakesvizualietut.html
+++ b/earthquakesvizualietut.html
@@ -48,7 +48,7 @@
       }
     </script>
     <script async defer
-    src="https://maps.googleapis.com/maps/api/js?key=YOUR_API_KEY&callback=initMap">
+    src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDGuhuzjsq_tS-M67ArtS48nD9mhA05r_g&callback=initMap">
     </script>
   </body>
 </html>
