--- a/mapmarkerstut.html
+++ b/mapmarkerstut.html
@@ -22,7 +22,7 @@ function initMap() {
   var map = new google.maps.Map(
       document.getElementById('map'), {zoom: 4, center: random});
   // The marker, positioned at Uluru
-  var marker = new google.maps.Marker({position: random, map: map});
+  var marker = new google.maps.Marker({position: random,Title:"Chicken", map: map});
 }
     </script>
     <script async defer
