--- a/part2of3.html
+++ b/part2of3.html
@@ -33,12 +33,12 @@
         center: [-118.80500,34.02700],
         zoom: 13
       });
-	 <!-- var basemapToggle = new BasemapToggle({ -->
-      <!--  view: view, -->
-      <!--  nextBasemap: "satellite" -->
-     <!-- });-[ -->
+	  var basemapToggle = new BasemapToggle({ 
+        view: view, 
+       nextBasemap: "satellite" 
+      });-[ 
 
-    <!--});-->
+    });
 	  var basemapGallery = new BasemapGallery({
         view: view, view.ui.add(basemapGallery, "top-right");
         source: {
