--- a/part2of3.html
+++ b/part2of3.html
@@ -19,9 +19,7 @@
     require([
       "esri/Map",
       "esri/views/MapView",
-      "esri/widgets/BasemapToggle",
-      "esri/widgets/BasemapGallery"
-    ], function(Map, MapView, BasemapToggle, BasemapGallery) {
+    ], function(Map, MapView) {
 
       var map = new Map({
         basemap: "topo-vector"
@@ -33,21 +31,13 @@
         center: [-118.80500,34.02700],
         zoom: 13
       });
-	  var basemapToggle = new BasemapToggle({ 
-        view: view, 
-       nextBasemap: "satellite" 
+     var basemapToggle = new BasemapToggle({
+        view: view, view.ui.add(basemapToggle, "bottom-right");
+        nextBasemap: "satellite"
       });
+          
 
     });
-	  var basemapGallery = new BasemapGallery({
-        view: view, view.ui.add(basemapGallery, "top-right");
-        source: {
-          portal: {
-            url: "https://www.arcgis.com",
-            useVectorBasemaps: true  // Load vector tile basemaps
-          }
-        }
-      });
   </script>
 </head>
 <body>
