--- a/part2of3.html
+++ b/part2of3.html
@@ -31,8 +31,8 @@
         center: [-118.80500,34.02700],
         zoom: 13
       });
-     var basemapToggle = new BasemapToggle({
-        view: view, view.ui.add(basemapToggle, "bottom-right");
+      var basemapToggle = new BasemapToggle({
+        view: view.ui.add(basemapToggle, "bottom-right");
         nextBasemap: "satellite"
       });
           
