--- a/Mapboxdemo1.html
+++ b/Mapboxdemo1.html
@@ -35,7 +35,7 @@
         map.addLayer(
             {
                 'id': 'Canada',
-                'type': 'raster',
+                'type': 'Feature Layer',
                 'source': 'wms-test-source',
                 'paint': {}
             },
