--- a/Mapboxdemo1.html
+++ b/Mapboxdemo1.html
@@ -36,8 +36,8 @@
             {
                 'id': 'Canada',
                 'type': 'Feature Layer',
-                'source': 'wms-test-source',
-                'paint': {}
+                
+                'paint': {#228B22}
             },
             'aeroway-line'
         );
