--- a/Mapboxdemo1.html
+++ b/Mapboxdemo1.html
@@ -34,7 +34,7 @@
         });
         map.addLayer(
             {
-                'id': 'Canada',
+                'id': 'wms-test-layer',
                 'type': 'raster',
                 'source': 'wms-test-source',
                 'paint': {}
