--- a/Mapboxdemo1.html
+++ b/Mapboxdemo1.html
@@ -16,7 +16,7 @@
 <script>
 	// Modified example from this source: https://docs.mapbox.com/mapbox-gl-js/example/wms/
 	// Be sure to insert your OWN mapbox token.
-	mapboxgl.accessToken = 'pk.eyJ1Ijoic2hhd25tZmxlbWluZ2MiLCJhIjoiY2p2cW54OWd6MHBsNTQzbW82eGdoMnhiayJ9.J0aHRw_EPtUzVsp0aEIS1g';
+	mapboxgl.accessToken = 'pk.eyJ1IjoiZ2hvZ2FuIiwiYSI6ImNrN3VweXl3ZjAycXEzbXJ5bHh2NTNoOWkifQ.CWE66eUw97Kybq9Z4kO9kw';
     var map = new mapboxgl.Map({
         container: 'map',
         style: 'mapbox://styles/mapbox/light-v10',
