--- a/Mapboxdemo1.html
+++ b/Mapboxdemo1.html
@@ -37,7 +37,7 @@
                 'id': 'wms-test-layer',
                 'type': 'raster',
                 'source': 'wms-test-source',
-                'paint': {}
+                'paint': {#013220}
             },
             'aeroway-line'
         );
