--- a/par.html
+++ b/par.html
@@ -105,7 +105,7 @@
         <div class>Static and dynamic content editing</div>
         <h4><a href="mapwebsite">trailname</a></h4>
         
-        <p>Trail info info info</p>
+        <p>Trail info info name name info name notice this spotinfo</p>
       </div>
     </div>
 	    <div>
