--- a/par.html
+++ b/par.html
@@ -111,7 +111,7 @@
 	    <div>
       <div class="column"></div>
        <div class="card">
-        <img src>"images/fleminglogo.jpg"</img>
+        <img src="images/fleminglogo.jpg">
         
         <div class>Static and dynamic content editing</div>
         <h4><a href="mapwebsite">trailname</a></h4>
