--- a/par.html
+++ b/par.html
@@ -78,7 +78,7 @@
 	    <div>
       <div class="column"></div>
        <div class="card">
-        <img src>trailimage</img>
+        <img src>TripAdvisorLogo.jpg</img>
         
         <div class>Static and dynamic content editing</div>
         <h4><a href="mapwebsite">trailname</a></h4>
@@ -89,7 +89,7 @@
 	    <div>
       <div class="column"></div>
        <div class="card">
-        <img src>pintrest.svg</img>
+        <img src>pinterest.svg</img>
         
         <div class>Static and dynamic content editing</div>
         <h4><a href="mapwebsite">trailname</a></h4>
