--- a/par.html
+++ b/par.html
@@ -112,11 +112,12 @@
       <div class="column"></div>
        <div class="card">
         <img src="images/FlemingLogo.jpg">
-        
+         <div class="contaner2">
 
-         <h4><a href="mapwebsite">trailname</a></h4>
+          <h4><a href="mapwebsite">trailname</a></h4>
         
-         <p>Trail info info info</p>
+          <p>Trail info info info</p>
+	  </div>	 
       </div>
     </div>
   </section>
