--- a/par.html
+++ b/par.html
@@ -108,7 +108,7 @@
         <p>Trail info info name name info name notice this spotinfo</p>
       </div>
     </div>
-	    <div>
+	  <div class="row">
              <div class="column"></div>
               <div class="card">
                <img src="images/FlemingLogo.jpg">
@@ -120,7 +120,7 @@
 	        </div>	 
               </div>
              </div>
-	    </div>
+	    </div>  
   </section>
   <div class="footer-section">
     <div class="w-container">
