--- a/par.html
+++ b/par.html
@@ -64,15 +64,17 @@
         <p>Trail info info info</p>
       </div>
     </div>
-	    <div>
-      <div class="column"></div>
-       <div class="card">
-        <img src>trailimage</img>
-        
-        <div class>Static and dynamic content editing</div>
-        <h4><a href="mapwebsite">trailname</a></h4>
-        
-        <p>Trail info info info</p>
+ <div class="row">
+    <div class="column">
+      <div class="card">
+        <img src="img" alt="k" >
+        <div class="container">
+          <h3>work</h3>
+          <p class="trail</p>
+          <p>trial23242424 </p>
+          <p>clickydo/p>
+
+        </div>
       </div>
     </div>
 	    <div>
