--- a/par.html
+++ b/par.html
@@ -99,17 +99,20 @@
         <p>Trail info info info</p>
       </div>
     </div>
-	    <div>
-      <div class="column"></div>
-       <div class="card">
-        <img src="images/favicon.ico">
-        
-        <div class>Static and dynamic content editing</div>
-        <h4><a href="mapwebsite">trailname</a></h4>
-        
-        <p>Trail info info name name info name notice this spotinfo</p>
+ <div class="row">
+    <div class="column">
+      <div class="card">
+        <img src="images/FlemingLogo.jpg" alt="k" >
+        <div class="container2">
+          <h4><a href="mapwebsite">trailname</a></h4>
+          <p class="trail</p>
+          <p>trial23242424 </p>
+          <p>clickydo/p>
+
+        </div>
       </div>
     </div>
+</div>
 	  <div class="row">
              <div class="column"></div>
               <div class="card">
