--- a/par.html
+++ b/par.html
@@ -105,9 +105,10 @@
         <img src="images/FlemingLogo.jpg" alt="k" >
          <div class="container2">
            <h4><a href="mapwebsite">trailname</a></h4>
-           <p class="trail</p>
+           
+	   <p>trail</p>
            <p>trial23242424 </p>
-           <p>clickydo/p>
+           <p>clickydo</p>
 
          </div>
       </div>
